# ChangeLog for sys-apps/pcmcia-cs-tools
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/pcmcia-cs-tools/Attic/ChangeLog,v 1.7 2004/06/24 22:21:30 agriffis Exp $

  13 Jun 2004; Donnie Berkholz <spyderous@gentoo.org>;
  pcmcia-cs-tools-3.2.3.ebuild, pcmcia-cs-tools-3.2.4.ebuild:
  Change x11-base/xfree dependency to virtual/x11 (#52153).

  14 Mar 2004; Peter Johanson <latexer@gentoo.org>
  pcmcia-cs-tools-3.2.3.ebuild, pcmcia-cs-tools-3.2.4.ebuild:
  Fixed to not override portage read-only variables.

  10 Jun 2003; <msterret@gentoo.org> pcmcia-cs-tools-3.2.3.ebuild,
  pcmcia-cs-tools-3.2.4.ebuild:
  DEPEND on sed >= 4

*pcmcia-cs-tools-3.2.4 (4 Mar 2003)

  4 Mar 2003; Peter Johanson <latexer@gentoo.org> pcmcia-cs-tools-3.2.4.ebuild :
  Version bump.

*pcmcia-cs-tools-3.2.3 (23 Jan 2003)

  23 Jan 2003; Chad Huneycutt <chadh@gentoo.org> pcmcia-cs-tools-3.2.3.ebuild :
  This package installs just the tools (cardmgr, etc.) from pcmcia-cs.
  Installing this ebuild achieves almost the same result as installing the old
  pcmcia-cs package with pcmcia enabled in the kernel config.  The advantage of
  having a separate ebuild is more apparent in the context of this ebuild's
  partner, pcmcia-cs-drivers, which installs just the pcmcia-cs modules.
  Hopefully this new separation will make it easier to configure your laptop
  exactly as needed.